src/slang/parser/SLANGParser.java
// Generated from SLANG.g4 by ANTLR 4.13.1

  package slang.parser;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class SLANGParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, ID=48, LITA=49, LITB=50, LITC=51, LITD=52, WHITESPACE=53, 
		LINECOMMENT=54, COMMENT=55, ERROR=56;
	public static final int
		RULE_language = 0, RULE_clause = 1, RULE_domaindef = 2, RULE_domaincon = 3, 
		RULE_domainname = 4, RULE_printerdomain = 5, RULE_printercase = 6, RULE_parserdomain = 7, 
		RULE_parsercase = 8, RULE_inference = 9, RULE_step = 10, RULE_equation = 11, 
		RULE_body = 12, RULE_command = 13, RULE_variable = 14, RULE_value = 15, 
		RULE_domainpattern = 16, RULE_domainexp = 17, RULE_type = 18, RULE_types = 19, 
		RULE_bodies = 20, RULE_values = 21, RULE_variables = 22, RULE_ids = 23, 
		RULE_id = 24, RULE_literal = 25;
	private static String[] makeRuleNames() {
		return new String[] {
			"language", "clause", "domaindef", "domaincon", "domainname", "printerdomain", 
			"printercase", "parserdomain", "parsercase", "inference", "step", "equation", 
			"body", "command", "variable", "value", "domainpattern", "domainexp", 
			"type", "types", "bodies", "values", "variables", "ids", "id", "literal"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'language'", "'{'", "';'", "'}'", "'target'", "'java'", "'header'", 
			"'code'", "'domains'", "'printer'", "'parser'", "'antlr4'", "'judgment'", 
			"'judgement'", "'\\u22A2'", "'|-'", "':'", "'('", "')'", "'before'", 
			"'after'", "'transition'", "'\\u27E8'", "'<<'", "','", "'\\u27E9'", "'>>'", 
			"'\\u2192'", "'->'", "'function'", "'\\u301A'", "'[['", "'\\u301B'", 
			"']]'", "'='", "'+'", "'['", "']'", "'domain'", "'case'", "'prefix'", 
			"'inference'", "'step'", "'equation'", "'\\u00D7'", "'*'", "'or'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			"ID", "LITA", "LITB", "LITC", "LITD", "WHITESPACE", "LINECOMMENT", "COMMENT", 
			"ERROR"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "SLANG.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SLANGParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LanguageContext extends ParserRuleContext {
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public TerminalNode EOF() { return getToken(SLANGParser.EOF, 0); }
		public List<ClauseContext> clause() {
			return getRuleContexts(ClauseContext.class);
		}
		public ClauseContext clause(int i) {
			return getRuleContext(ClauseContext.class,i);
		}
		public LanguageContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_language; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SLANGListener ) ((SLANGListener)listener).enterLanguage(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SLANGListener ) ((SLANGListener)listener).exitLanguage(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SLANGVisitor ) return ((SLANGVisitor<? extends T>)visitor).visitLanguage(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LanguageContext language() throws RecognitionException {
		LanguageContext _localctx = new LanguageContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_language);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(52);
			match(T__0);
			setState(53);
			id();
			setState(54);
			match(T__1);
			setState(58);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__2) {
				{
				{
				setState(55);
				match(T__2);
				}
				}
				setState(60);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(70);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 1077964576L) != 0)) {
				{
				{
				setState(61);
				clause();
				setState(65);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__2) {
					{
					{
					setState(62);
					match(T__2);
					}
					}
					setState(67);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				}
				setState(72);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(73);
			match(T__3);
			setState(74);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ClauseContext extends ParserRuleContext {
		public ClauseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_clause; }
	 
		public ClauseContext() { }
		public void copyFrom(ClauseContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class DomainsContext extends ClauseContext {
		public List<DomaindefContext> domaindef() {
			return getRuleContexts(DomaindefContext.class);
		}
		public DomaindefContext domaindef(int i) {
			return getRuleContext(DomaindefContext.class,i);
		}
		public DomainsContext(ClauseContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SLANGListener ) ((SLANGListener)listener).enterDomains(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SLANGListener ) ((SLANGListener)listener).exitDomains(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SLANGVisitor ) return ((SLANGVisitor<? extends T>)visitor).visitDomains(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class FunctionContext extends ClauseContext {
		public IdContext fun;
		public IdContext domain;
		public TypesContext in;
		public TypesContext out;
		public IdContext before;
		public IdContext bid;
		public IdsContext bin;
		public LiteralContext bliteral;
		public IdContext after;
		public IdContext aid;
		public IdsContext ain;
		public IdsContext aout;
		public LiteralContext aliteral;
		public List<IdContext> id() {
			return getRuleContexts(IdContext.class);
		}
		public IdContext id(int i) {
			return getRuleContext(IdContext.class,i);
		}
		public List<TypesContext> types() {
			return getRuleContexts(TypesContext.class);
		}
		public TypesContext types(int i) {
			return getRuleContext(TypesContext.class,i);
		}
		public List<EquationContext> equation() {
			return getRuleContexts(EquationContext.class);
		}
		public EquationContext equation(int i) {
			return getRuleContext(EquationContext.class,i);
		}
		public List<LiteralContext> literal() {
			return getRuleContexts(LiteralContext.class);
		}
		public LiteralContext literal(int i) {
			return getRuleContext(LiteralContext.class,i);
		}
		public List<IdsContext> ids() {
			return getRuleContexts(IdsContext.class);
		}
		public IdsContext ids(int i) {
			return getRuleContext(IdsContext.class,i);
		}
		public FunctionContext(ClauseContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SLANGListener ) ((SLANGListener)listener).enterFunction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SLANGListener ) ((SLANGListener)listener).exitFunction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SLANGVisitor ) return ((SLANGVisitor<? extends T>)visitor).visitFunction(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class TargetContext extends ClauseContext {
		public LiteralContext literal() {
			return getRuleContext(LiteralContext.class,0);
		}
		public TargetContext(ClauseContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SLANGListener ) ((SLANGListener)listener).enterTarget(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SLANGListener ) ((SLANGListener)listener).exitTarget(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SLANGVisitor ) return ((SLANGVisitor<? extends T>)visitor).visitTarget(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class TransitionContext extends ClauseContext {
		public IdContext domain;
		public TypesContext in;
		public IdContext fun;
		public TypesContext out;
		public IdsContext bin;
		public IdContext bid;
		public IdContext before;
		public IdsContext bout;
		public LiteralContext bliteral;
		public IdsContext ain;
		public IdContext aid;
		public IdContext after;
		public IdsContext aout;
		public LiteralContext aliteral;
		public List<IdContext> id() {
			return getRuleContexts(IdContext.class);
		}
		public IdContext id(int i) {
			return getRuleContext(IdContext.class,i);
		}
		public List<TypesContext> types() {
			return getRuleContexts(TypesContext.class);
		}
		public TypesContext types(int i) {
			return getRuleContext(TypesContext.class,i);
		}
		public List<StepContext> step() {
			return getRuleContexts(StepContext.class);
		}
		public StepContext step(int i) {
			return getRuleContext(StepContext.class,i);
		}
		public List<LiteralContext> literal() {
			return getRuleContexts(LiteralContext.class);
		}
		public LiteralContext literal(int i) {
			return getRuleContext(LiteralContext.class,i);
		}
		public List<IdsContext> ids() {
			return getRuleContexts(IdsContext.class);
		}
		public IdsContext ids(int i) {
			return getRuleContext(IdsContext.class,i);
		}
		public TransitionContext(ClauseContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SLANGListener ) ((SLANGListener)listener).enterTransition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SLANGListener ) ((SLANGListener)listener).exitTransition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SLANGVisitor ) return ((SLANGVisitor<? extends T>)visitor).visitTransition(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class PrinterContext extends ClauseContext {
		public List<PrinterdomainContext> printerdomain() {
			return getRuleContexts(PrinterdomainContext.class);
		}
		public PrinterdomainContext printerdomain(int i) {
			return getRuleContext(PrinterdomainContext.class,i);
		}
		public PrinterContext(ClauseContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SLANGListener ) ((SLANGListener)listener).enterPrinter(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SLANGListener ) ((SLANGListener)listener).exitPrinter(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SLANGVisitor ) return ((SLANGVisitor<? extends T>)visitor).visitPrinter(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class CodeContext extends ClauseContext {
		public LiteralContext literal() {
			return getRuleContext(LiteralContext.class,0);
		}
		public CodeContext(ClauseContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SLANGListener ) ((SLANGListener)listener).enterCode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SLANGListener ) ((SLANGListener)listener).exitCode(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SLANGVisitor ) return ((SLANGVisitor<? extends T>)visitor).visitCode(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ParserContext extends ClauseContext {
		public List<ParserdomainContext> parserdomain() {
			return getRuleContexts(ParserdomainContext.class);
		}
		public ParserdomainContext parserdomain(int i) {
			return getRuleContext(ParserdomainContext.class,i);
		}
		public ParserContext(ClauseContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SLANGListener ) ((SLANGListener)listener).enterParser(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SLANGListener ) ((SLANGListener)listener).exitParser(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SLANGVisitor ) return ((SLANGVisitor<? extends T>)visitor).visitParser(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class JudgmentContext extends ClauseContext {
		public TypesContext in;
		public IdContext domain;
		public IdContext fun;
		public TypesContext out;
		public IdsContext bin;
		public IdContext bid;
		public IdContext before;
		public IdsContext bout;
		public LiteralContext bliteral;
		public IdsContext ain;
		public IdContext aid;
		public IdContext after;
		public IdsContext aout;
		public LiteralContext aliteral;
		public List<IdContext> id() {
			return getRuleContexts(IdContext.class);
		}
		public IdContext id(int i) {
			return getRuleContext(IdContext.class,i);
		}
		public List<InferenceContext> inference() {
			return getRuleContexts(InferenceContext.class);
		}
		public InferenceContext inference(int i) {
			return getRuleContext(InferenceContext.class,i);
		}
		public List<TypesContext> types() {
			return getRuleContexts(TypesContext.class);
		}
		public TypesContext types(int i) {
			return getRuleContext(TypesContext.class,i);
		}
		public List<LiteralContext> literal() {
			return getRuleContexts(LiteralContext.class);
		}
		public LiteralContext literal(int i) {
			return getRuleContext(LiteralContext.class,i);
		}
		public List<IdsContext> ids() {
			return getRuleContexts(IdsContext.class);
		}
		public IdsContext ids(int i) {
			return getRuleContext(IdsContext.class,i);
		}
		public JudgmentContext(ClauseContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SLANGListener ) ((SLANGListener)listener).enterJudgment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SLANGListener ) ((SLANGListener)listener).exitJudgment(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SLANGVisitor ) return ((SLANGVisitor<? extends T>)visitor).visitJudgment(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClauseContext clause() throws RecognitionException {
		ClauseContext _localctx = new ClauseContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_clause);
		int _la;
		try {
			setState(296);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__4:
				_localctx = new TargetContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(76);
				match(T__4);
				setState(77);
				match(T__5);
				setState(78);
				match(T__1);
				setState(79);
				match(T__6);
				setState(80);
				literal();
				setState(81);
				match(T__3);
				}
				break;
			case T__7:
				_localctx = new CodeContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(83);
				match(T__7);
				setState(84);
				literal();
				}
				break;
			case T__8:
				_localctx = new DomainsContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(85);
				match(T__8);
				setState(86);
				match(T__1);
				setState(90);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==ID) {
					{
					{
					setState(87);
					domaindef();
					}
					}
					setState(92);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(93);
				match(T__3);
				}
				break;
			case T__9:
				_localctx = new PrinterContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(94);
				match(T__9);
				setState(95);
				match(T__1);
				setState(99);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__38) {
					{
					{
					setState(96);
					printerdomain();
					}
					}
					setState(101);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(102);
				match(T__3);
				}
				break;
			case T__10:
				_localctx = new ParserContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(103);
				match(T__10);
				setState(104);
				match(T__11);
				setState(105);
				match(T__1);
				setState(109);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__38) {
					{
					{
					setState(106);
					parserdomain();
					}
					}
					setState(111);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(112);
				match(T__3);
				}
				break;
			case T__12:
			case T__13:
				_localctx = new JudgmentContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(113);
				_la = _input.LA(1);
				if ( !(_la==T__12 || _la==T__13) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(115);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 8444249301319680L) != 0)) {
					{
					setState(114);
					((JudgmentContext)_localctx).in = types();
					}
				}

				setState(117);
				_la = _input.LA(1);
				if ( !(_la==T__14 || _la==T__15) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(118);
				((JudgmentContext)_localctx).domain = id();
				setState(119);
				match(T__16);
				setState(120);
				((JudgmentContext)_localctx).fun = id();
				setState(125);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__17) {
					{
					setState(121);
					match(T__17);
					setState(122);
					((JudgmentContext)_localctx).out = types();
					setState(123);
					match(T__18);
					}
				}

				setState(127);
				match(T__1);
				setState(131);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__41) {
					{
					{
					setState(128);
					inference();
					}
					}
					setState(133);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(134);
				match(T__3);
				setState(151);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__19) {
					{
					setState(135);
					match(T__19);
					setState(137);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==ID) {
						{
						setState(136);
						((JudgmentContext)_localctx).bin = ids();
						}
					}

					setState(139);
					_la = _input.LA(1);
					if ( !(_la==T__14 || _la==T__15) ) {
					_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					setState(140);
					((JudgmentContext)_localctx).bid = id();
					setState(141);
					match(T__16);
					setState(142);
					((JudgmentContext)_localctx).before = id();
					setState(147);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==T__17) {
						{
						setState(143);
						match(T__17);
						setState(144);
						((JudgmentContext)_localctx).bout = ids();
						setState(145);
						match(T__18);
						}
					}

					setState(149);
					((JudgmentContext)_localctx).bliteral = literal();
					}
				}

				setState(169);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__20) {
					{
					setState(153);
					match(T__20);
					setState(155);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==ID) {
						{
						setState(154);
						((JudgmentContext)_localctx).ain = ids();
						}
					}

					setState(157);
					_la = _input.LA(1);
					if ( !(_la==T__14 || _la==T__15) ) {
					_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					setState(158);
					((JudgmentContext)_localctx).aid = id();
					setState(159);
					match(T__16);
					setState(160);
					((JudgmentContext)_localctx).after = id();
					setState(165);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==T__17) {
						{
						setState(161);
						match(T__17);
						setState(162);
						((JudgmentContext)_localctx).aout = ids();
						setState(163);
						match(T__18);
						}
					}

					setState(167);
					((JudgmentContext)_localctx).aliteral = literal();
					}
				}

				}
				break;
			case T__21:
				_localctx = new TransitionContext(_localctx);
				enterOuterAlt(_localctx, 7);
				{
				setState(171);
				match(T__21);
				setState(173);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__22 || _la==T__23) {
					{
					setState(172);
					_la = _input.LA(1);
					if ( !(_la==T__22 || _la==T__23) ) {
					_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					}
				}

				setState(175);
				((TransitionContext)_localctx).domain = id();
				setState(178);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__24) {
					{
					setState(176);
					match(T__24);
					setState(177);
					((TransitionContext)_localctx).in = types();
					}
				}

				setState(181);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__25 || _la==T__26) {
					{
					setState(180);
					_la = _input.LA(1);
					if ( !(_la==T__25 || _la==T__26) ) {
					_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					}
				}

				setState(183);
				_la = _input.LA(1);
				if ( !(_la==T__27 || _la==T__28) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(185);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==ID) {
					{
					setState(184);
					((TransitionContext)_localctx).fun = id();
					}
				}

				setState(188);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__22 || _la==T__23) {
					{
					setState(187);
					_la = _input.LA(1);
					if ( !(_la==T__22 || _la==T__23) ) {
					_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					}
				}

				setState(190);
				((TransitionContext)_localctx).out = types();
				setState(192);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__25 || _la==T__26) {
					{
					setState(191);
					_la = _input.LA(1);
					if ( !(_la==T__25 || _la==T__26) ) {
					_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					}
				}
